# million-miles

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  deploy.env.example  docker-compose.yml  pyproject.toml
back/: __init__.py  auth.py  bootstrap.py  celery_app.py  config.py  database.py  localization.py  main.py  runner.py  schemas.py  services.py  tasks.py
front/: package-lock.json  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/app/cars/[id]/: page.tsx
front/app/inventory/: page.tsx
front/app/login/: page.tsx
front/components/: car-detail-page.tsx  inventory-page.tsx  login-page.tsx
front/lib/: api.ts  auth.ts  format.ts  types.ts
parser/: __init__.py  carsensor.py  cli.py  models.py
