[project]
name = "million-miles"
version = "0.1.0"
description = ""
authors = [
    {name = "ro9aine"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "beautifulsoup4>=4.12.3,<5.0.0",
    "deep-translator>=1.11.4,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "playwright>=1.52.0,<2.0.0",
    "requests>=2.32.3,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.scripts]
back-dev = "back.runner:dev"
back-start = "back.runner:start"
carsensor-parse = "parser.carsensor:main"
carsensor-record = "recorder.carsensor:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "back" },
    { include = "parser" },
    { include = "recorder" },
]
