[project]
name = "million-miles"
version = "0.1.0"
description = ""
authors = [
    {name = "ro9aine"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aiohttp>=3.11.0,<4.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "deep-translator>=1.11.4,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "playwright>=1.52.0,<2.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.scripts]
back-dev = "back.runner:dev"
back-start = "back.runner:start"
back-worker = "back.runner:celery_worker"
back-beat = "back.runner:celery_beat"
carsensor-parse = "parser.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "back" },
    { include = "parser" },
]
